--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Bienvenido al curso de git</h1>
-    <img src="https://git-scm.com/images/logos/logomark-orange@2x.png" alt="git logo">
+    <div class="bar">
+        <img class="logo" src="git.png" alt="git logo">
+        <h1>Bienvenido al curso de GIT</h1>
+    </div>
 
     <h1>Ranking de Videojuegos para PC 2023</h1>
     <ul>
